# training

./: .gitignore  README.md  compose.yml
.devcontainer/golang-container/: Dockerfile  devcontainer.json
.devcontainer/node-container/: Dockerfile  devcontainer.json
.devcontainer/python-container/: Dockerfile  devcontainer.json
.devcontainer/terraform-container/: Dockerfile  devcontainer.json
.devcontainer/terraform-container/direnv/: config.toml
golang-src/: .air.toml  buf.gen.yaml  buf.yaml  go.mod  go.sum
golang-src/cmd/server/: main.go
golang-src/greet/v1/: greet.proto
infra/mongodb/: Dockerfile
infra/postgres/: Dockerfile
node-src/tutorial/: package.json
node-src/tutorial/src/components/: Greeting.tsx  Header.astro
node-src/tutorial/src/pages/: about.astro
node-src/tutorial/src/styles/: global.css
python-src/: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
python-src/src/: main.py
satellite-data-analytics/: README.md  pyproject.toml  test.ipynb
satellite-data-analytics/src/satellite_data_analytics/: __init__.py
shellgei160/qdata/2/img/: image_generator.bash
shellgei160/src/: ex1.sh  ex2.sh  ex3.sh  ex4.sh  ex5.sh  ex6.sh
terraform-src/: main.tf
