[project]
name = "python-src"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.1",
    "black>=24.4.2",
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "ruff>=0.5.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_src"]
