[project]
name = "satellite-data-analytics"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JojiKoike", email = "5671422+JojiKoike@users.noreply.github.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "numpy>=2.0.1",
    "geopandas>=1.0.1",
    "rasterio>=1.3.10",
    "cartopy>=0.23.0",
    "gdal==3.6.2",
    "scikit-learn>=1.5.1",
    "seaborn>=0.13.2",
    "mamba>=0.11.3",
    "geojson>=3.1.0",
    "contextily>=1.6.0",
    "mplleaflet>=0.0.5",
    "sentinelsat>=1.2.1",
    "earthpy>=0.9.4",
    "six>=1.16.0",
    "fiona>=1.9.6",
    "folium>=0.17.0",
    "openeo>=0.31.0",
    "xarray>=2024.6.0",
    "rioxarray>=0.17.0",
    "netcdf4>=1.7.1.post1",
    "pygeos>=0.14",
    "ftree>=1.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.5",
    "mypy>=1.11.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/satellite_data_analytics"]

[tool.ruff]
extend-include = ["*.ipynb"]
